# Taskler

./: Makefile  README.md  backend_api.yaml  connect_server_guide.md  curls.sh  pyproject.toml  test_cases.md  webserver_guide.md
backend/: docker-compose.yml  pytest.ini
backend/app/: admin.py  apps.py  cron.py  models.py  serializers.py  urls.py
backend/app/migrations/: 0001_initial.py
backend/app/services/: curr_tasks.py  general.py  recurring_tasks.py  repeat_sub_title_generator.py  task_list_generator.py
backend/app/tests/: conftest.py  factories.py  test_cron.py  test_cur_task_api.py  test_cur_task_dates_serializer.py  test_get_csrf.py  test_recurring_task_api.py  test_recurring_task_serializer.py  test_task_api.py  test_task_list_generator.py  test_task_serializer.py
backend/app/utils/: app_logger.py  exceptions.py  formatters.py  handlers.py  types.py  validators.py
backend/app/views/: auth.py  ping.py  tasks.py
backend/backend/: asgi.py  urls.py  wsgi.py
backend/backend/settings/: __init__.py  allauth.py  database.py  development.py  loggers.py  main.py  production.py
frontend/: package.json
frontend/src/: App.css  App.js
frontend/src/authorization/: LoginForm.css  LoginForm.js  LoginProvider.js
frontend/src/buttons/: ArrowButton.css  ArrowButton.js
frontend/src/components/: AssistantChat.css  AssistantChat.jsx  ColorPicker.css  ColorPicker.js  DayView.css  DayView.js  FixedView.js  MyDayPicker.css
tools/tweeky-api-bruno/: bruno.json  collection.bru  test_repeat.bru  tweeky-api.json
tools/tweeky-api-bruno/auth endpoints/: get csrf.bru  (+5 more)
(+12 files in other folders)
