[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.poetry]
name = "project3-tweeky"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project3"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1.1"
djangorestframework = "^3.15.2"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
psycopg = {extras = ["binary"], version = "^3.2.3"}
django-cors-headers = "^4.6.0"
django-crontab = "^0.7.1"
drf-spectacular = "0.27.0"
drf-api-logger = "1.1.15"
django-allauth = "^65.3.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
factory-boy = "^3.3.1"
pytest-django = "^4.9.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^6.0.0"
setuptools = "^75.6.0"
pytest-mock = "^3.14.0"
python-decouple = "^3.8"
requests = "^2.32.3"
systemd-logging = "^1.0.1"
python-json-logger = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
